--- a/index.html
+++ b/index.html
@@ -64,18 +64,6 @@
             </div>
         </section>
 
-        <!-- Quiz Night CTA -->
-        <section class="home-cta">
-            <div class="cta-card glass">
-                <span class="pill pill-new">New quiz sets</span>
-                <h2>Quiz Night</h2>
-                <p>Grab friends or fly solo for a full evening of trivia. Each Quiz Night volume delivers 50 themed questions spanning pop culture, history, science, and more - now with fresh categories in volumes VI through VIII.</p>
-                <div class="store-links">
-                    <a class="btn btn-primary" href="./quizzes.html">Browse quizzes</a>
-                </div>
-            </div>
-        </section>
-
         <!-- All Games -->
         <section aria-label="All games" class="games-grid">
             <article class="game-card glass">
@@ -199,6 +187,17 @@
                     <p>Browser prototype tower defense</p>
                     <div class="store-links">
                         <a class="btn" href="./games/edge-spawn-td.html">Play prototype</a>
+                    </div>
+                </div>
+            </article>
+
+            <article class="game-card glass">
+                <div class="game-card-content">
+                    <span class="pill pill-new">New quiz sets</span>
+                    <h3>Quiz Night</h3>
+                    <p>Grab friends or fly solo for a full evening of trivia. Each Quiz Night volume delivers 50 themed questions spanning pop culture, history, science, and more - now with fresh categories in volumes VI through VIII.</p>
+                    <div class="store-links">
+                        <a class="btn btn-primary" href="./quizzes.html">Browse quizzes</a>
                     </div>
                 </div>
             </article>
