--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
             <article class="game-card glass">
                 <a class="cover-link" href="./games/edge-spawn-td.html" aria-label="Edge-Spawn TD prototype page">
-                    <img loading="lazy" decoding="async" src="./img/logo.jpg" alt="Edge-Spawn TD prototype cover image">
+                    <img loading="lazy" decoding="async" src="./img/EdgeSpawnTD.png" alt="Edge-Spawn TD prototype cover image">
                 </a>
                 <div class="game-card-content">
                     <h3>Edge-Spawn TD</h3>
