Add Idle Genesis game to the main page and implement core game functionality

--- a/index.html
+++ b/index.html
@@ -67,6 +67,18 @@
         <!-- All Games -->
         <section aria-label="All games" class="games-grid">
             <article class="game-card glass">
+                <a class="cover-link" href="./games/idle-genesis/" aria-label="Idle Genesis browser game">
+                    <img loading="lazy" decoding="async" src="./img/logo.jpg" alt="Idle Genesis cover image">
+                </a>
+                <div class="game-card-content">
+                    <h3>Idle Genesis</h3>
+                    <p>In-browser incremental prototype</p>
+                    <div class="store-links">
+                        <a class="btn" href="./games/idle-genesis/" aria-label="Play Idle Genesis in your browser">Play</a>
+                    </div>
+                </div>
+            </article>
+            <article class="game-card glass">
                 <a class="cover-link" href="https://apps.apple.com/au/app/eternum-inc/id6741140312" target="_blank" rel="noopener" aria-label="Eternum Inc page">
                     <img loading="lazy" decoding="async" src="./img/EternumInc.webp" alt="Eternum Inc cover image">
                 </a>
